--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -27,10 +27,13 @@
         </Label>
         <Label fx:id="name" text="\$first" styleClass="cell_big_label" />
       </HBox>
+
       <HBox spacing="5" alignment="CENTER_LEFT">
-        <FlowPane fx:id="role" />
+        <FlowPane fx:id="role" maxWidth="65" />
         <FlowPane fx:id="tags" />
       </HBox>
+
+
       <Label fx:id="phone" styleClass="cell_small_label" text="\$phone" />
       <Label fx:id="address" styleClass="cell_small_label" text="\$address" />
       <Label fx:id="email" styleClass="cell_small_label" text="\$email" />
@@ -41,7 +44,10 @@
       <Label fx:id="products" styleClass="cell_small_label" text="\$products" visible="false" />
       <Label fx:id="skills" styleClass="cell_small_label" text="\$skills" visible="false" />
       <Label fx:id="termsOfService" styleClass="cell_small_label" text="\$termsOfService" visible="false" />
-      <Label fx:id="id" styleClass="cell_small_label" text="\$id"/>
+
+      <HBox spacing="5" alignment="BOTTOM_RIGHT">
+        <Label fx:id="id" styleClass="cell_small_label" text="\$id" />
+      </HBox>
     </VBox>
   </GridPane>
 </HBox>
