Move tag, role and id

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -340,9 +340,9 @@
 
 #tags .label {
     -fx-text-fill: white;
-    -fx-background-color: #3e7b91;
+    -fx-background-color: #366041;
     -fx-padding: 1 6 1 6;
-    -fx-border-radius: 3;
+    -fx-border-radius: 5;
     -fx-background-radius: 2;
     -fx-font-size: 15;
 }
@@ -354,7 +354,6 @@
 
 #role .label {
     -fx-text-fill: white;
-    -fx-background-color: #ab9360;
     -fx-padding: 1 6 1 6;
     -fx-border-radius: 3;
     -fx-background-radius: 2;
