--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.Scene?>
 <?import javafx.stage.Stage?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.FlowPane?>
 <fx:root type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
          title="NetConnect" minWidth="450" minHeight="600" onCloseRequest="#handleExit">
     <icons>
@@ -22,55 +22,40 @@
                 <URL value="@DarkTheme.css"/>
                 <URL value="@Extensions.css"/>
             </stylesheets>
-            <HBox>
-                <VBox>
-                    <MenuBar fx:id="menuBar" VBox.vgrow="NEVER">
-                        <Menu mnemonicParsing="false" text="File">
-                            <MenuItem mnemonicParsing="false" onAction="#handleExit" text="Exit"/>
-                        </Menu>
-                        <Menu mnemonicParsing="false" text="Help">
-                            <MenuItem fx:id="helpMenuItem" mnemonicParsing="false" onAction="#handleHelp" text="Help"/>
-                        </Menu>
-                    </MenuBar>
 
-                    <StackPane VBox.vgrow="NEVER" fx:id="commandBoxPlaceholder" styleClass="pane-with-border">
-                        <padding>
-                            <Insets top="5" right="10" bottom="5" left="10"/>
-                        </padding>
-                    </StackPane>
+            <VBox>
+                <MenuBar fx:id="menuBar" VBox.vgrow="NEVER">
+                    <Menu mnemonicParsing="false" text="File">
+                        <MenuItem mnemonicParsing="false" onAction="#handleExit" text="Exit"/>
+                    </Menu>
+                    <Menu mnemonicParsing="false" text="Help">
+                        <MenuItem fx:id="helpMenuItem" mnemonicParsing="false" onAction="#handleHelp" text="Help"/>
+                    </Menu>
+                </MenuBar>
 
-                        <StackPane VBox.vgrow="NEVER" fx:id="resultDisplayPlaceholder" styleClass="pane-with-border"
-                                   minHeight="100" prefHeight="100" maxHeight="100">
-                            <padding>
-                                <Insets top="5" right="10" bottom="5" left="10"/>
-                            </padding>
-                        </StackPane>
-                    <HBox>
-                        <VBox fx:id="personList" styleClass="pane-with-border" minWidth="340" prefWidth="340"
-                              VBox.vgrow="ALWAYS">
-                            <padding>
-                                <Insets top="10" right="10" bottom="10" left="10"/>
-                            </padding>
-                            <StackPane fx:id="personListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
-                        </VBox>
+                <StackPane VBox.vgrow="NEVER" fx:id="commandBoxPlaceholder" styleClass="pane-with-border">
+                    <padding>
+                        <Insets top="5" right="10" bottom="5" left="10"/>
+                    </padding>
+                </StackPane>
 
-                        <HBox>
-                            <VBox>
-                                <StackPane fx:id="birthdayListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
-                                <VBox fx:id="birthdayList" styleClass="pane-with-border" minWidth="340" prefWidth="340"
-                                      VBox.vgrow="ALWAYS">
-                                    <padding>
-                                        <Insets top="10" right="10" bottom="10" left="10"/>
-                                    </padding>
-                                </VBox>
-                            </VBox>
-                        </HBox>
-                    </HBox>
+                <StackPane VBox.vgrow="NEVER" fx:id="resultDisplayPlaceholder" styleClass="pane-with-border"
+                           minHeight="100" prefHeight="100" maxHeight="100">
+                    <padding>
+                        <Insets top="5" right="10" bottom="5" left="10"/>
+                    </padding>
+                </StackPane>
 
-                    <StackPane fx:id="statusbarPlaceholder" VBox.vgrow="NEVER"/>
+                <VBox fx:id="personList" styleClass="pane-with-border" minWidth="340" prefWidth="340"
+                      VBox.vgrow="ALWAYS">
+                    <padding>
+                        <Insets top="10" right="10" bottom="10" left="10"/>
+                    </padding>
+                    <StackPane fx:id="personListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
                 </VBox>
 
-            </HBox>
+                <StackPane fx:id="statusbarPlaceholder" VBox.vgrow="NEVER"/>
+            </VBox>
         </Scene>
     </scene>
 </fx:root>
